# win32pointer_rs

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
src/monitors/: mod.rs
src/pointers/: devicestates.rs  mod.rs  pointer.rs  pointerstates.rs
